--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,15 @@
     },
     "require-dev": {
         "orchestra/testbench": "^9.0",
-        "larastan/larastan": "^3.0"
+        "larastan/larastan": "^3.0",
+        "pestphp/pest": "^3.8",
+        "pestphp/pest-plugin-laravel": "^3.2",
+        "pestphp/pest-plugin-livewire": "^3.0"
     },
     "config": {
         "allow-plugins": {
-            "pixelfear/composer-dist-plugin": true
+            "pixelfear/composer-dist-plugin": true,
+            "pestphp/pest-plugin": true
         }
     },
     "extra": {
